Fixing overflow on horizontal axis and adding diagtams

--- a/StackSwapApplication/wwwroot/css/site.css
+++ b/StackSwapApplication/wwwroot/css/site.css
@@ -421,6 +421,7 @@ viewTable th  viewTable td {
     display: flex;
     height: 70vh;
     overflow-y: scroll;
+    overflow-x: scroll;
     justify-content: center;
     border: thin;
     /*    justify-content: center;
